--- a/src/components/ImageCard/ImageCard.module.css
+++ b/src/components/ImageCard/ImageCard.module.css
@@ -7,7 +7,7 @@
     border-radius: 10px;
 }
 .imageSelected {
-    border: 2px solid purple;
+    border: 2px solid var(--brand-color);
     padding: 2px
 }
 .cardName {
